--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Godot 4+ specific ignores
 .godot/
 /android/
-/export_presets.cfg/
-/godot-jolt_windows-x64.dll/
+export_presets.cfg
+godot-jolt_windows-x64.dll
